Adding routes, dashboard component

--- a/public/index.html
+++ b/public/index.html
@@ -2,16 +2,20 @@
 <html lang="pt-br">
   <head>
     <meta charset="utf-8" />
-    <link rel="shortcut icon" type="image/x-icon" href="%PUBLIC_URL%/favicon.png" />
+    <link
+      rel="shortcut icon"
+      type="image/x-icon"
+      href="%PUBLIC_URL%/favicon.png"
+    />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <meta
-      name="description"
-      content="O maior hackathon online do Brasil!""
-    />
+    <meta name="description" content="O maior hackathon online do Brasil!"" />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <title>Mega Hack: Desafio XP</title>
-    <link href="https://fonts.googleapis.com/css?family=Roboto:400,700&display=swap" rel="stylesheet">
+    <link
+      href="https://fonts.googleapis.com/css?family=Roboto:400,700&display=swap"
+      rel="stylesheet"
+    />
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
