Fixed home page

--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,7 @@
     <meta name="theme-color" content="#000000" />
     <meta name="description" content="O maior hackathon online do Brasil!"" />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
-    <title>Mega Hack: Desafio XP</title>
+    <title>Invista seu dindin [ Mega Hack: Desafio XP ]</title>
     <link
       href="https://fonts.googleapis.com/css?family=Roboto:400,700&display=swap"
       rel="stylesheet"
